Fix project example section z-index issue

--- a/styles.less
+++ b/styles.less
@@ -203,6 +203,7 @@ h3 {
         position: absolute;
             top: 0;
             left: 0;
+        z-index: -1;
     }
 }
 
